# hermes-llamacpp-slot-proxy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/slot_proxy/: config.py  detector.py  eraser.py  main.py  proxy.py
tests/: test_integration.py  test_proxy.py
