[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-llamacpp-slot-proxy"
version = "0.1.0"
description = "Tiny proxy that clears the active llama.cpp slot on Hermes /new"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.7",
    "mypy>=1.12",
]

[project.scripts]
slot-proxy = "slot_proxy.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
